--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <section class="search">
       <h2 class="main__title">¿Qué quieres ver hoy?</h2>
-      <input class="input" type="text" placeholder="Buscar...">
+      <input class="search__input" type="text" placeholder="Buscar...">
     </section>
     <section class="carousel">
       <div class="carousel__container">
